# exo-sense-rp-c

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  example.c
example/lib/sensirion/sht4x/: CMakeLists.txt  sht_git_version.c
lib/exo_sense_rp/: CMakeLists.txt
lib/exo_sense_rp/include/: exo_sense_rp.h
